manufacturer race...why did I spend so much time on this?

--- a/notebook/wind_eda.ipynb
+++ b/notebook/wind_eda.ipynb
@@ -1710,7 +1710,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "turbine_count_year = turbine_count_year.sort_values(by=['t_manu', 'p_year'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1741,370 +1750,109 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>Siemens</td>\n",
-       "      <td>510</td>\n",
+       "      <th>127</th>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>AAER</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>Vestas</td>\n",
-       "      <td>276</td>\n",
+       "      <th>152</th>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>AAER</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Acciona</td>\n",
-       "      <td>155</td>\n",
+       "      <th>29</th>\n",
+       "      <td>1997.0</td>\n",
+       "      <td>AOC</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>GE Wind</td>\n",
-       "      <td>1927</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>250</th>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Gamesa</td>\n",
-       "      <td>196</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>251</th>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Goldwind</td>\n",
+       "      <th>39</th>\n",
+       "      <td>1999.0</td>\n",
+       "      <td>AOC</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>252</th>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>NEG Micon</td>\n",
+       "      <th>46</th>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>AOC</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>Windmatic</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>253</th>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Nordex</td>\n",
-       "      <td>55</td>\n",
+       "      <th>232</th>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>Windmatic</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>254</th>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Renewtech LLC</td>\n",
-       "      <td>1</td>\n",
+       "      <th>34</th>\n",
+       "      <td>1997.0</td>\n",
+       "      <td>Zond</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>255</th>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Sany</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>256</th>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Siemens</td>\n",
-       "      <td>525</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>257</th>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Siemens Gamesa Renewable Energy</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>258</th>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Vergnet</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>259</th>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Vestas</td>\n",
-       "      <td>1400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>260</th>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>GE Wind</td>\n",
-       "      <td>1684</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>261</th>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>Gamesa</td>\n",
-       "      <td>152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>262</th>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>Goldwind</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>263</th>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>Nordex</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>264</th>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>Northern Power Systems</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>265</th>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>Siemens</td>\n",
-       "      <td>349</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>266</th>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>Vensys</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>267</th>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>Vergnet</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>268</th>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>Vestas</td>\n",
-       "      <td>1533</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>269</th>\n",
-       "      <td>2017.0</td>\n",
-       "      <td>Aeronautica</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>270</th>\n",
-       "      <td>2017.0</td>\n",
-       "      <td>GE Wind</td>\n",
-       "      <td>887</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>271</th>\n",
-       "      <td>2017.0</td>\n",
-       "      <td>Gamesa</td>\n",
-       "      <td>419</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>272</th>\n",
-       "      <td>2017.0</td>\n",
-       "      <td>Goldwind</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>273</th>\n",
-       "      <td>2017.0</td>\n",
-       "      <td>HZ Windpower</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>274</th>\n",
-       "      <td>2017.0</td>\n",
-       "      <td>Nordex</td>\n",
-       "      <td>262</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>275</th>\n",
-       "      <td>2017.0</td>\n",
-       "      <td>Siemens</td>\n",
-       "      <td>323</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>276</th>\n",
-       "      <td>2017.0</td>\n",
-       "      <td>Vensys</td>\n",
+       "      <th>38</th>\n",
+       "      <td>1998.0</td>\n",
+       "      <td>Zond</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>277</th>\n",
-       "      <td>2017.0</td>\n",
-       "      <td>Vestas</td>\n",
-       "      <td>1106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>278</th>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>EWT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>279</th>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>GE Wind</td>\n",
-       "      <td>1200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>280</th>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>Goldwind</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>281</th>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>Nordex</td>\n",
-       "      <td>280</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>282</th>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>Siemens Gamesa Renewable Energy</td>\n",
-       "      <td>253</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>283</th>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>Vensys</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>284</th>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>Vestas</td>\n",
-       "      <td>1228</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>285</th>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>EWT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>286</th>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>GE Wind</td>\n",
-       "      <td>1671</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>287</th>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>Goldwind</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>288</th>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>Nordex</td>\n",
-       "      <td>168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>289</th>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>Siemens</td>\n",
-       "      <td>118</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>290</th>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>Siemens Gamesa Renewable Energy</td>\n",
-       "      <td>397</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>291</th>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>Vestas</td>\n",
-       "      <td>1205</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>292</th>\n",
-       "      <td>2020.0</td>\n",
-       "      <td>GE Wind</td>\n",
-       "      <td>1000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>293</th>\n",
-       "      <td>2020.0</td>\n",
-       "      <td>Nordex</td>\n",
-       "      <td>47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>294</th>\n",
-       "      <td>2020.0</td>\n",
-       "      <td>Siemens Gamesa Renewable Energy</td>\n",
-       "      <td>125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>295</th>\n",
-       "      <td>2020.0</td>\n",
-       "      <td>Vestas</td>\n",
-       "      <td>418</td>\n",
+       "      <th>45</th>\n",
+       "      <td>1999.0</td>\n",
+       "      <td>Zond</td>\n",
+       "      <td>209</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>296 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     p_year                           t_manu  case_id\n",
-       "246  2014.0                          Siemens      510\n",
-       "247  2014.0                           Vestas      276\n",
-       "248  2015.0                          Acciona      155\n",
-       "249  2015.0                          GE Wind     1927\n",
-       "250  2015.0                           Gamesa      196\n",
-       "251  2015.0                         Goldwind        5\n",
-       "252  2015.0                        NEG Micon        1\n",
-       "253  2015.0                           Nordex       55\n",
-       "254  2015.0                    Renewtech LLC        1\n",
-       "255  2015.0                             Sany       11\n",
-       "256  2015.0                          Siemens      525\n",
-       "257  2015.0  Siemens Gamesa Renewable Energy        1\n",
-       "258  2015.0                          Vergnet        4\n",
-       "259  2015.0                           Vestas     1400\n",
-       "260  2016.0                          GE Wind     1684\n",
-       "261  2016.0                           Gamesa      152\n",
-       "262  2016.0                         Goldwind        1\n",
-       "263  2016.0                           Nordex       31\n",
-       "264  2016.0           Northern Power Systems        1\n",
-       "265  2016.0                          Siemens      349\n",
-       "266  2016.0                           Vensys       10\n",
-       "267  2016.0                          Vergnet        1\n",
-       "268  2016.0                           Vestas     1533\n",
-       "269  2017.0                      Aeronautica        1\n",
-       "270  2017.0                          GE Wind      887\n",
-       "271  2017.0                           Gamesa      419\n",
-       "272  2017.0                         Goldwind        4\n",
-       "273  2017.0                     HZ Windpower       14\n",
-       "274  2017.0                           Nordex      262\n",
-       "275  2017.0                          Siemens      323\n",
-       "276  2017.0                           Vensys        3\n",
-       "277  2017.0                           Vestas     1106\n",
-       "278  2018.0                              EWT        1\n",
-       "279  2018.0                          GE Wind     1200\n",
-       "280  2018.0                         Goldwind       70\n",
-       "281  2018.0                           Nordex      280\n",
-       "282  2018.0  Siemens Gamesa Renewable Energy      253\n",
-       "283  2018.0                           Vensys        7\n",
-       "284  2018.0                           Vestas     1228\n",
-       "285  2019.0                              EWT        1\n",
-       "286  2019.0                          GE Wind     1671\n",
-       "287  2019.0                         Goldwind        8\n",
-       "288  2019.0                           Nordex      168\n",
-       "289  2019.0                          Siemens      118\n",
-       "290  2019.0  Siemens Gamesa Renewable Energy      397\n",
-       "291  2019.0                           Vestas     1205\n",
-       "292  2020.0                          GE Wind     1000\n",
-       "293  2020.0                           Nordex       47\n",
-       "294  2020.0  Siemens Gamesa Renewable Energy      125\n",
-       "295  2020.0                           Vestas      418"
+       "     p_year     t_manu  case_id\n",
+       "127  2009.0       AAER        2\n",
+       "152  2010.0       AAER        1\n",
+       "29   1997.0        AOC        1\n",
+       "39   1999.0        AOC        5\n",
+       "46   2000.0        AOC        2\n",
+       "..      ...        ...      ...\n",
+       "27   1995.0  Windmatic        1\n",
+       "232  2012.0  Windmatic        5\n",
+       "34   1997.0       Zond       12\n",
+       "38   1998.0       Zond        3\n",
+       "45   1999.0       Zond      209\n",
+       "\n",
+       "[296 rows x 3 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "turbine_count_year.tail(50)"
+    "turbine_count_year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "turbine_count_year.to_csv('turbine_year.csv')"
    ]
   },
   {
