--- a/notebook/global_wind.ipynb
+++ b/notebook/global_wind.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2192,7 +2192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -2341,7 +2341,7 @@
        "4                          0.0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2352,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -2386,7 +2386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2395,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -2550,7 +2550,7 @@
        "4                          0.0 2004-01-01  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2561,7 +2561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -2596,7 +2596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2605,11 +2605,435 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
-    "elec.to_csv('../data/electricity_us.csv')"
+    "#elec.to_csv('../data/electricity_us.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elec = elec[elec['Year'] >= 1980]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elec = elec.drop(columns = ['Entity', 'Code', 'Year'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elec = elec.set_index('Year_date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elec.columns = [['Coal', 'Gas', 'Hydro', 'Nuclear', 'Oil', 'Renewables', 'Solar', 'Wind']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Coal</th>\n",
+       "      <th>Gas</th>\n",
+       "      <th>Hydro</th>\n",
+       "      <th>Nuclear</th>\n",
+       "      <th>Oil</th>\n",
+       "      <th>Renewables</th>\n",
+       "      <th>Solar</th>\n",
+       "      <th>Wind</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year_date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1980-01-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>282.002</td>\n",
+       "      <td>264.332</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26.656</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1981-01-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>266.510</td>\n",
+       "      <td>287.025</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>27.378</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1982-01-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>315.529</td>\n",
+       "      <td>297.656</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26.405</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1983-01-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>338.678</td>\n",
+       "      <td>309.134</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.805</td>\n",
+       "      <td>0.003</td>\n",
+       "      <td>0.003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984-01-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>327.587</td>\n",
+       "      <td>344.877</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.595</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>0.007</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Coal Gas    Hydro  Nuclear Oil Renewables  Solar   Wind\n",
+       "Year_date                                                         \n",
+       "1980-01-01  NaN NaN  282.002  264.332 NaN     26.656  0.000  0.000\n",
+       "1981-01-01  NaN NaN  266.510  287.025 NaN     27.378  0.000  0.000\n",
+       "1982-01-01  NaN NaN  315.529  297.656 NaN     26.405  0.000  0.000\n",
+       "1983-01-01  NaN NaN  338.678  309.134 NaN     29.805  0.003  0.003\n",
+       "1984-01-01  NaN NaN  327.587  344.877 NaN     35.595  0.005  0.007"
+      ]
+     },
+     "execution_count": 264,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elec.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elec = elec.stack().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elec = elec.fillna(method='bfill', axis='columns')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elec = elec.iloc[:, 0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year_date</th>\n",
+       "      <th>level_1</th>\n",
+       "      <th>Coal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Hydro</td>\n",
+       "      <td>282.002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Nuclear</td>\n",
+       "      <td>264.332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Renewables</td>\n",
+       "      <td>26.656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Solar</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Wind</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year_date     level_1     Coal\n",
+       "0 1980-01-01       Hydro  282.002\n",
+       "1 1980-01-01     Nuclear  264.332\n",
+       "2 1980-01-01  Renewables   26.656\n",
+       "3 1980-01-01       Solar        0\n",
+       "4 1980-01-01        Wind        0"
+      ]
+     },
+     "execution_count": 272,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elec.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elec.columns = [['Year', 'Source', 'Twh']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Twh</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Hydro</td>\n",
+       "      <td>282.002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Nuclear</td>\n",
+       "      <td>264.332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Renewables</td>\n",
+       "      <td>26.656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Solar</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Wind</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>Nuclear</td>\n",
+       "      <td>852.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>Oil</td>\n",
+       "      <td>19.964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>Renewables</td>\n",
+       "      <td>78.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>303</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>Solar</td>\n",
+       "      <td>108.359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>304</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>Wind</td>\n",
+       "      <td>303.102</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>305 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Year      Source      Twh\n",
+       "0   1980-01-01       Hydro  282.002\n",
+       "1   1980-01-01     Nuclear  264.332\n",
+       "2   1980-01-01  Renewables   26.656\n",
+       "3   1980-01-01       Solar        0\n",
+       "4   1980-01-01        Wind        0\n",
+       "..         ...         ...      ...\n",
+       "300 2019-01-01     Nuclear   852.01\n",
+       "301 2019-01-01         Oil   19.964\n",
+       "302 2019-01-01  Renewables    78.34\n",
+       "303 2019-01-01       Solar  108.359\n",
+       "304 2019-01-01        Wind  303.102\n",
+       "\n",
+       "[305 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elec.to_csv('cleaned_data/electricity_by_source_us.csv')"
    ]
   },
   {
